products/blanner/deploy/k8s/overlays/staging/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blanner-staging
  labels:
    nafura.io/app: blanner
    nafura.io/env: staging
