products/blanner/deploy/k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blanner
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls: []
  rules:
    - host: api.blanner.nafuralabs.staging
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blanner-backend
                port:
                  number: 8080
